arragned the projects page grid-layout

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -49,6 +49,8 @@
     </div>
   </div>
 
+ <div class="featured-items-hr"> featured items </div>
+
   <div class="homepage-content-section feeds-container">
  
     <div class="recent-project-container feed">
@@ -71,7 +73,7 @@
       <div class="project-details">
         <div class="prject-name details">recently completed project</div>
         <div class="project-description details">
-          <i class="bi bi-pin-fill"></i> Mabunda Group
+          Mabunda Group
         </div>
         <div class="tech-stack details">
           <div class="project-tech">Technologies</div>
