--- a/src/styles/layout/_page-intro.scss
+++ b/src/styles/layout/_page-intro.scss
@@ -37,7 +37,7 @@
             color: $light-neutral-font-color;
             cursor: pointer;
             border: none;
-            border-radius: $spacing-xs;
+            // border-radius: $spacing-xs;
 
             &.projects {
                 background-color: orange;
