--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -48,31 +48,43 @@
       </div>
 
       <div class="right-container">
+
         <div class="project-concepts project-detail-item">
           <div class="item-heading">Implemented concepts</div>
-          <div class="item-details">
+
+          <div class="list-container">
+            <div class="item-details">
             <ul>
               <li>
-                <i class="bi bi-record-circle-fill"></i> Responsive UI Design
+                <i class="bi bi-stop-circle-fill"></i> Responsive UI Design
               </li>
-              <li><i class="bi bi-record-circle-fill"></i> Angular Framework</li>
+              <li><i class="bi bi-stop-circle-fill"></i> Angular Framework</li>
               <li>
-                <i class="bi bi-record-circle-fill"></i> RESTful API Integration
+                <i class="bi bi-stop-circle-fill"></i> RESTful API Integration
               </li>
-              <li><i class="bi bi-record-circle-fill"></i> Unit Tests</li>
+             
+            </ul>
+            </div>
+            <div class="item-details">
+            <ul>
+              <li><i class="bi bi-stop-circle-fill"></i> Unit Tests</li>
               <li>
-                <i class="bi bi-record-circle-fill"></i> GitHub Source Control
+                <i class="bi bi-stop-circle-fill"></i> GitHub Source Control
               </li>
               <li>
-                <i class="bi bi-record-circle-fill"></i>Search Engine
+                <i class="bi bi-stop-circle-fill"></i>Search Engine
                 Optimization
               </li>
             </ul>
           </div>
         </div>
+        </div>
+        
         <div class="project-features project-detail-item">
           <div class="item-heading">features</div>
-          <div class="item-details">
+
+          <div class="list-container">
+            <div class="item-details">
             <ul>
               <li>
                 <i class="bi bi-check-square-fill"></i> Geo-location-based
@@ -84,23 +96,31 @@
               <li>
                 <i class="bi bi-check-square-fill"></i> Integrated Google Maps
               </li>
-              <li>
-                <i class="bi bi-check-square-fill"></i> Social media share
-                buttons
-              </li>
-              <li>
-                <i class="bi bi-check-square-fill"></i> Integrated Contact Form
-              </li>
 
-              <li>
-                <i class="bi bi-check-square-fill"></i> Toggle themes
-                (Dark/Light)
-              </li>
             </ul>
-          </div>
+            </div>
+            <div class="item-details">
+              <ul>
+                <li>
+                  <i class="bi bi-check-square-fill"></i> Social media share
+                  buttons
+                </li>
+                <li>
+                  <i class="bi bi-check-square-fill"></i> Integrated Contact Form
+                </li>
+
+                <li>
+                  <i class="bi bi-check-square-fill"></i> Toggle themes
+                  (Dark/Light)
+                </li>
+              </ul>
+            </div>
+         </div>
         </div>
-      </div>
-    </div>
+
+        </div>
+       </div>
+
   </section>
 
   <section class="featured-projects">
