--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -14,10 +14,11 @@
 
         display: flex;
         flex-direction: row;
-        // border: 1px solid $light-border-color;
+        //  border: 1px solid $light-border-color;
 
         .site-logo {
             margin-right: 15px;
+            display: none;
             //  border: 1px solid $light-border-color;
 
             img {
@@ -28,11 +29,11 @@
         }
 
         .site-title-and-description {
-            //  border: 1px solid $light-border-color;
+            // border: 1px solid $light-border-color;
             width: 100%;
+            margin-left: 10px;
 
             .site-title {
-
                 .site-theme {
                     display: none;
                 }
@@ -74,7 +75,6 @@
             display: none;
         }
     }
-
 
     //Media queries for responsive design
 
